设置为禁用 ssl 验证

--- a/.drone.yml
+++ b/.drone.yml
@@ -6,6 +6,12 @@ platform:
   os: linux
   arch: arm64
 
+clone:
+  git:
+#    image: plugins/git
+#	   recursive: true
+    skip_verify: true
+    
 steps:
   # get tag
   - name: tag
